--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <a class="header__logo">
-            <img class="header__logo-img" src="/mamillows/images/logo.png">
+            <img class="header__logo-img" src="/images/logo.png">
         </a>
         <div class="header__search-container">
             <input class="header__search-input" placeholder="Поиск..." name="search" />
@@ -40,8 +40,8 @@
             </ul>
         </nav>
         <div class="header__button-container">
-            <button class="header__button"><img class="header__button-img" src="/mamillows/images/cart.png" alt=""></button>
-            <button class="header__button"><img class="header__button-img" src="/mamillows/images/account.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="/images/cart.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="/images/account.png" alt=""></button>
         </div>
     </header>
     <nav class="breadcrumbs">
@@ -63,25 +63,25 @@
             <div class="swiper product-main__thumb-slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/mamillows/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/mamillows/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/mamillows/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/mamillows/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/mamillows/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/mamillows/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                     <div class="swiper-slide product-main__thumb">
-                        <img src="/mamillows/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
                     </div>
                 </div>
             </div>
@@ -92,31 +92,31 @@
             <div class="swiper product-main__slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/mamillows/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/mamillows/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/mamillows/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/mamillows/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/mamillows/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/mamillows/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/mamillows/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                 </div>
             </div>
             <section class="product-info">
                 <p class="product-info__title">Vanilla+Plombir</p>
-                <img src="/mamillows/images/separator-pink.png" alt="" class="product-info__separator">
+                <img src="/images/separator-pink.png" alt="" class="product-info__separator">
                 <h2 class="product-info__description-heading">Описание</h2>
                 <p class="product-info__description">
                     Классическая линия маршмеллоу maMiLlow’s имеет изысканный ванильный нежный вкус с легкими нотками пломбирного мороженого или вкус фруктового сочного микса.<br>
@@ -202,7 +202,7 @@
                 <br><strong>Состав:</strong> патока крахмальная, сахар, вода питьевая, декстроза, крахмал кукурузный, желатин, ароматизаторы.
                 <br><strong>Использовать для:</strong> Маршмеллоу – универсальный продукт, который можно использовать в кулинарии, творчестве и развлечениях. Он идеальноподходит для создания дессертов, украшения блюд или оригинальных подарков. Кроме того, маршмеллоу станет отличным эелементом для детских игр и творческих занятий.
             </p>
-            <img src="/mamillows/images/product-page-bottom-separator.png" alt="" class="product-features__separator">
+            <img src="/images/product-page-bottom-separator.png" alt="" class="product-features__separator">
         </section>
     </main>
     <footer class="footer">
@@ -217,7 +217,7 @@
                 <label for="subscription-checkbox" class="footer__privacy-label">Я согласен с <a href="">политикой конфиденциальности</a></label>
             </fieldset>
         </form>
-        <img srcset="/mamillows/images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
+        <img srcset="/images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
         <p class="footer__info">
             ООО &laquo;Компания&raquo;<br>
             <br>
