Адаптив страницы товара

--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <a class="header__logo">
-            <img class="header__logo-img" src="/images/logo.png">
+            <img class="header__logo-img" src="images/logo.png">
         </a>
         <div class="header__search-container">
             <input class="header__search-input" placeholder="Поиск..." name="search" />
@@ -40,8 +40,8 @@
             </ul>
         </nav>
         <div class="header__button-container">
-            <button class="header__button"><img class="header__button-img" src="/images/cart.png" alt=""></button>
-            <button class="header__button"><img class="header__button-img" src="/images/account.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/cart.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/account.png" alt=""></button>
         </div>
     </header>
     <nav class="breadcrumbs">
@@ -58,91 +58,83 @@
         </ol>
     </nav>
     <main class="product-page">
-        <h1 class="product-page__heading">Маршмеллоу классический с ароматом пломбира и ванили, 90 г</h1>
-        <div class="product-main">
-            <div class="swiper product-main__thumb-slider">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
-                    </div>
-                    <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
-                    </div>
-                    <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
-                    </div>
-                    <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
-                    </div>
-                    <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
-                    </div>
-                    <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
-                    </div>
-                    <div class="swiper-slide product-main__thumb">
-                        <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+        <h1 class="container product-page__title">Маршмеллоу классический с ароматом пломбира и ванили, 90 г</h1>
+        <div class="container product-main">
+            <div class="product-main__thumb-container">
+                <div class="swiper product-main__thumb-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide product-main__thumb">
+                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        </div>
+                        <div class="swiper-slide product-main__thumb">
+                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        </div>
+                        <div class="swiper-slide product-main__thumb">
+                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        </div>
+                        <div class="swiper-slide product-main__thumb">
+                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        </div>
+                        <div class="swiper-slide product-main__thumb">
+                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        </div>
+                        <div class="swiper-slide product-main__thumb">
+                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        </div>
+                        <div class="swiper-slide product-main__thumb">
+                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="product-main__navigation">
-                <button class="swiper-button-prev product-main__slider-button"></button>
-                <button class="swiper-button-next product-main__slider-button"></button>
+                <div class="product-main__navigation">
+                    <button class="swiper-button-prev product-main__slider-button"></button>
+                    <button class="swiper-button-next product-main__slider-button"></button>
+                </div>
             </div>
             <div class="swiper product-main__slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                     <div class="swiper-slide product-main__image-slide">
-                        <img src="/images/product-slider-big.png" alt="" class="product-main__image">
+                        <img src="images/product-slider-big.png" alt="" class="product-main__image">
                     </div>
                 </div>
             </div>
             <section class="product-info">
                 <p class="product-info__title">Vanilla+Plombir</p>
-                <img src="/images/separator-pink.png" alt="" class="product-info__separator">
+                <img src="images/separator-pink.png" alt="" class="product-info__separator">
                 <h2 class="product-info__description-heading">Описание</h2>
                 <p class="product-info__description">
                     Классическая линия маршмеллоу maMiLlow’s имеет изысканный ванильный нежный вкус с легкими нотками пломбирного мороженого или вкус фруктового сочного микса.<br>
                     Продукт мягкий, воздушный и тает во рту, оставляя приятное сливочное 
                     послевкусие. В поджаренном виде добавляется карамельная хрустящая корочка, а внутри он становится тягучим и теплым.
                 </p>
-                <table class="product-info__property-table">
-                    <thead>
-                        <tr>
-                            <th class="product-info__property">Качества:</th>
-                            <th class="product-info__property">Срок храниения:</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <ul class="product-info__property-list">
-                                    <li class="product-info__property">насыщенный легкий вкус;</li>
-                                    <li class="product-info__property">отличная эргономика;</li>
-                                    <li class="product-info__property">правильно плавится.</li>
-                                </ul>
-                            </td>
-                            <td class="product-info__property">6 месяцев</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="product-info__property-table">
+                    <p class="product-info__property">Качества:</p>
+                    <p class="product-info__property">Срок храниения:</p>
+                    <ul class="product-info__property-list">
+                        <li class="product-info__property">насыщенный легкий вкус;</li>
+                        <li class="product-info__property">отличная эргономика;</li>
+                        <li class="product-info__property">правильно плавится.</li>
+                    </ul>
+                    <p class="product-info__property">6 месяцев</p>
+                </div>
                 <div class="product-info__action">
                     <div class="product-info__counter">
                         <button class="product-info__counter-button">-</button>
@@ -153,56 +145,56 @@
                 </div>
             </section>
         </div>
-        <section class="product-about">
-            <h2 class="product-about__heading">О товаре</h2>
-            <table class="product-about__table">
+        <section class="container product-about">
+            <h2 class="product-page__subtitle">О товаре</h2>
+            <table class="product-table">
                 <tr>
-                    <th class="product-about__cell product-about__cell--heading">Тип</th>
-                    <td class="product-about__cell">Маршмеллоу</td>
+                    <th class="product-table__cell product-table__cell--heading">Тип</th>
+                    <td class="product-table__cell">Маршмеллоу</td>
                 </tr>
                 <tr>
-                    <th class="product-about__cell product-about__cell--heading">Содержание сахара</th>
-                    <td class="product-about__cell">С сахаром</td>
+                    <th class="product-table__cell product-table__cell--heading">Содержание сахара</th>
+                    <td class="product-table__cell">С сахаром</td>
                 </tr>
                 <tr>
-                    <th class="product-about__cell product-about__cell--heading">Вкус</th>
-                    <td class="product-about__cell">Ваниль+Пломбир</td>
+                    <th class="product-table__cell product-table__cell--heading">Вкус</th>
+                    <td class="product-table__cell">Ваниль+Пломбир</td>
                 </tr>
                 <tr>
-                    <th class="product-about__cell product-about__cell--heading">Вес</th>
-                    <td class="product-about__cell">90 г</td>
-                </tr>
-            </table>
-        </section>
-        <section class="product-nutrition">
-            <h2 class="product-nutrition__heading">Пищевая ценность в 100 г продукта (средние значения):</h2>
-            <table class="product-nutrition__table">
-                <tr>
-                    <th class="product-nutrition__cell product-nutrition__cell--heading">Белки</th>
-                    <td class="product-nutrition__cell">3,5 г</td>
-                </tr>
-                <tr>
-                    <th class="product-nutrition__cell product-nutrition__cell--heading">Жиры</th>
-                    <td class="product-nutrition__cell">0,1 г</td>
-                </tr>
-                <tr>
-                    <th class="product-nutrition__cell product-nutrition__cell--heading">Углеводы</th>
-                    <td class="product-nutrition__cell">79,0 г</td>
-                </tr>
-                <tr>
-                    <th class="product-nutrition__cell product-nutrition__cell--heading">Энергетическая ценность (калорийность) в 100 г продукта</th>
-                    <td class="product-nutrition__cell">330 ккал/1410 кДж</td>
+                    <th class="product-table__cell product-table__cell--heading">Вес</th>
+                    <td class="product-table__cell">90 г</td>
                 </tr>
             </table>
         </section>
-        <section class="product-features">
+        <section class="container product-nutrition">
+            <h2 class="product-page__subtitle">Пищевая ценность в 100 г продукта (средние значения):</h2>
+            <table class="product-table">
+                <tr>
+                    <th class="product-table__cell product-table__cell--heading">Белки</th>
+                    <td class="product-table__cell">3,5 г</td>
+                </tr>
+                <tr>
+                    <th class="product-table__cell product-table__cell--heading">Жиры</th>
+                    <td class="product-table__cell">0,1 г</td>
+                </tr>
+                <tr>
+                    <th class="product-table__cell product-table__cell--heading">Углеводы</th>
+                    <td class="product-table__cell">79,0 г</td>
+                </tr>
+                <tr>
+                    <th class="product-table__cell product-table__cell--heading">Энергетическая ценность (калорийность) в 100 г продукта</th>
+                    <td class="product-table__cell">330 ккал/1410 кДж</td>
+                </tr>
+            </table>
+        </section>
+        <section class="container product-features">
             <h2 class="product-features__heading">Основные характеристики</h2>
             <p class="product-features__info">
                 Изделия кондитерские сахаристые. Маршмеллоу с ароматом пломбира и ванили для питания детей школьного возраста от 6 лет и старше.
                 <br><strong>Состав:</strong> патока крахмальная, сахар, вода питьевая, декстроза, крахмал кукурузный, желатин, ароматизаторы.
                 <br><strong>Использовать для:</strong> Маршмеллоу – универсальный продукт, который можно использовать в кулинарии, творчестве и развлечениях. Он идеальноподходит для создания дессертов, украшения блюд или оригинальных подарков. Кроме того, маршмеллоу станет отличным эелементом для детских игр и творческих занятий.
             </p>
-            <img src="/images/product-page-bottom-separator.png" alt="" class="product-features__separator">
+            <img src="images/product-page-bottom-separator.png" alt="" class="product-features__separator">
         </section>
     </main>
     <footer class="footer">
@@ -217,7 +209,7 @@
                 <label for="subscription-checkbox" class="footer__privacy-label">Я согласен с <a href="">политикой конфиденциальности</a></label>
             </fieldset>
         </form>
-        <img srcset="/images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
+        <img srcset="images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
         <p class="footer__info">
             ООО &laquo;Компания&raquo;<br>
             <br>
@@ -248,5 +240,5 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script type="module" src="scripts/product-page.js"></script>
+<script src="index.min.js"></script>
 </html>
