--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <a class="header__logo">
-            <img class="header__logo-img" src="/images/logo.png">
+            <img class="header__logo-img" src="images/logo.png">
         </a>
         <div class="header__search-container">
             <input class="header__search-input" placeholder="Поиск..." name="search" />
@@ -41,23 +41,23 @@
             </ul>
         </nav>
         <div class="header__button-container">
-            <button class="header__button"><img class="header__button-img" src="/images/cart.png" alt=""></button>
-            <button class="header__button"><img class="header__button-img" src="/images/account.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/cart.png" alt=""></button>
+            <button class="header__button"><img class="header__button-img" src="images/account.png" alt=""></button>
         </div>
     </header>
     <main class="about-page">
         <div class="about-top">
             <div class="about-top__container">
-                <img src="/images/about-logo.png" alt="" class="about-top__logo">
+                <img src="images/about-logo.png" alt="" class="about-top__logo">
                 <p class="about__text">Бренд maMiLlow's был создан семьей увлеченных бизнесменов с начальной идеей придумать здоровый и качественный продукт для своего ребенка-подростка, создать продукт-сладость, который не вызывал бы аллергической реакции на кожу и не давал скачков сахара на нежной гормональный фон тинейджера.</p>
             </div>
             <div class="swiper about-top__slider">
                 <div class="swiper-wrapper about-top__wrapper">
                     <div class="swiper-slide about-top__slide">
-                        <img src="/images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-image">
                     </div>
                     <div class="swiper-slide about-top__slide">
-                        <img src="/images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-image">
                     </div>
                 </div>
             </div>
@@ -75,23 +75,23 @@
                 </ul>
             </nav>
         </div>
-        <section class="about-mission" id="mission" aria-labelledby="#mission-heading">
+        <section class="container about-mission" id="mission" aria-labelledby="#mission-heading">
             <h2 class="about__title" id="mission-heading">Миссия maMillow's</h2>
             <p class="about__subtitle">В конце концов, <br>какое право мы имеем лишать кого-либо <br>сладостей maMiLlow's?</p>
             <a href="classic.html" class="about-mission__link">Перейти в каталог</a>
         </section>
-        <section class="about-philosophy" id="philosophy" aria-labelledby="#philosophy-heading">
+        <section class="container about-philosophy" id="philosophy" aria-labelledby="#philosophy-heading">
             <h2 class="about__title" id="philosophy-heading">Философия maMillow's</h2>
             <div class="about-philosophy__container">
                 <div class="about-philosophy__info">
                     <p class="about__subtitle">Идея создания продукта</p>
                     <p class="about__text">Идея создать совсем легкие маршмеллоу без сахара, которые бы отвечали самым строгим медицинским требованиям диетического питания, но при этом сохраняли бы насыщенный вкус и все эргономические свойства хороших маршмеллоу.</p>
                 </div>
-                <img src="/images/about-philosophy-image.png" alt="" class="about-philosophy__image">
+                <img src="images/about-philosophy-image.png" alt="" class="about-philosophy__image">
             </div>
         </section>
-        <section class="about-production" id="production" aria-labelledby="#production-heading">
-            <img src="/images/about-production-image.png" alt="" class="about-production__image">
+        <section class="container about-production" id="production" aria-labelledby="#production-heading">
+            <img src="images/about-production-image.png" alt="" class="about-production__image">
             <div class="about-production__container">
                 <h2 class="about__title" id="production-heading">Производство</h2>
                 <p class="about__subtitle">Выход на рынок</p>
@@ -105,7 +105,7 @@
                 </p>
             </div>
         </section>
-        <section class="about-recipe" id="recipe" aria-labelledby="#recipe-heading">
+        <section class="container about-recipe" id="recipe" aria-labelledby="#recipe-heading">
             <h2 class="about__title" id="recipe-heading">Инновационная рецептура</h2>
             <div class="about-recipe__container">
                 <p class="about__subtitle">Выход на рынок</p>
@@ -118,10 +118,10 @@
                     байерам и покупателям дизайн классической линейкой для тех, кто любит сахар в сладком.
                 </p>
             </div>
-            <img src="/images/about-recipe-document.png" alt="" class="about-recipe__image">
+            <img src="images/about-recipe-document.png" alt="" class="about-recipe__image">
         </section>
         <section class="about-legend" id="legend" aria-labelledby="#legend-heading">
-            <img src="/images/about-legend-image.png" alt="" class="about-legend__image">
+            <img src="images/about-legend-image.png" alt="" class="about-legend__image">
             <div class="about-legend__container">
                 <h2 class="about__title" id="legend-heading">Легенда бренда</h2>
                 <p class="about__subtitle">Идея создания продукта</p>
@@ -129,27 +129,27 @@
             </div>
         </section>
     </main>
-    <div class="feedback">
+    <div class="container feedback">
         <section class="contact" aria-labelledby="#contact-heading">
             <h2 id="contact-heading" class="about__title">Контакты</h2>
-            <img srcset="/images/contact-bg-mobile.png 480w, /images/contact-bg.png" alt="" class="contact__image">
+            <img srcset="images/contact-bg-mobile.png 480w, images/contact-bg.png" alt="" class="contact__image">
             <ul class="contact__list">
                 <li class="contact__item">
-                    <img src="/images/contact-email.png" alt="" class="contact__icon">
+                    <img src="images/contact-email.png" alt="" class="contact__icon">
                     <div class="contact__info">
                         <p class="contact__title">Email</p>
                         <a href="mailto:info@mimollows.ru" class="contact__link">info@mimillows.ru</a>
                     </div>
                 </li>
                 <li class="contact__item">
-                    <img src="/images/contact-tg.png" alt="" class="contact__icon">
+                    <img src="images/contact-tg.png" alt="" class="contact__icon">
                     <div class="contact__info">
                         <p class="contact__title">Поддержка</p>
                         <a href="t.me/mamillows" target="_blank" class="contact__link">t.me/mamillows</a>
                     </div>
                 </li>
                 <li class="contact__item">
-                    <img src="/images/contact-vk.png" alt="" class="contact__icon">
+                    <img src="images/contact-vk.png" alt="" class="contact__icon">
                     <div class="contact__info">
                         <p class="contact__title">ВКонтакте</p>
                         <a href="vk.com/mamillows" target="_blank" class="contact__link">vk.com/mamillows</a>
@@ -193,7 +193,7 @@
                 <label for="subscription-checkbox" class="footer__privacy-label">Я согласен с <a href="">политикой конфиденциальности</a></label>
             </fieldset>
         </form>
-        <img srcset="/images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
+        <img srcset="images/footer-separator-mobile.png 480w" alt="" class="footer__sepatator">
         <p class="footer__info">
             ООО &laquo;Компания&raquo;<br>
             <br>
@@ -224,5 +224,5 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="scripts/about-us-page.js"></script>
+<script src="index.min.js"></script>
 </html>
