--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="index.min.css">
+    <link rel="stylesheet" href="index.css">
     <title>Каталог</title>
 </head>
 <body>
@@ -64,25 +64,25 @@
                 <div class="swiper product-main__thumb-slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide product-main__thumb">
-                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                            <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                         </div>
                         <div class="swiper-slide product-main__thumb">
-                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                            <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                         </div>
                         <div class="swiper-slide product-main__thumb">
-                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                            <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                         </div>
                         <div class="swiper-slide product-main__thumb">
-                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                            <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                         </div>
                         <div class="swiper-slide product-main__thumb">
-                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                            <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                         </div>
                         <div class="swiper-slide product-main__thumb">
-                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                            <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                         </div>
                         <div class="swiper-slide product-main__thumb">
-                            <img src="/images/product-slider.png" alt="" class="product-main__thumb-image">
+                            <img src="images/product-slider.png" alt="" class="product-main__thumb-image">
                         </div>
                     </div>
                 </div>
@@ -240,5 +240,5 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="index.min.js"></script>
+<script src="index.js"></script>
 </html>
