--- a/sugar-free.html
+++ b/sugar-free.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://necolas.github.io/normalize.css/latest/normalize.css" rel="stylesheet" />
-    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
-    <link rel="stylesheet" href="index.min.css">
+    <link rel="stylesheet" href="index.css">
     <title>Каталог</title>
 </head>
 <body>
@@ -52,6 +51,7 @@
                 Классическая линия маршмеллоу maMiLliow’s имеет изысканный
                 ванильный нежный вкус с легкими нотками пломбирного мороженого
                 или вкус фруктового сочного микса.
+                <br><br>
                 Продукт мягкий, воздушный и тает во рту, оставляя приятное
                 сливочное послевкусие. В поджаренном виде добавляется
                 карамельная хрустящая корочка, а внутри он становится мягучим и тёплым.
@@ -111,7 +111,7 @@
                 </article>
             </div>
         </section>
-        <div class="container feedback">
+        <div class="container feedback" id="#feedback">
             <section class="contact" aria-labelledby="#contact-heading">
                 <h2 id="contact-heading" class="contact__heading">Контакты</h2>
                 <img srcset="images/contact-bg-mobile.png 480w, images/contact-bg.png" alt="" class="contact__image">
@@ -120,7 +120,7 @@
                         <img src="images/contact-email.png" alt="" class="contact__icon">
                         <div class="contact__info">
                             <p class="contact__title">Email</p>
-                            <a href="mailto:info@mimollows.ru" class="contact__link">info@mimillows.ru</a>
+                            <a href="mailto:info@mamillows.ru" class="contact__link">info@mimillows.ru</a>
                         </div>
                     </li>
                     <li class="contact__item">
