--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,7 @@
         </div>
     </header>
     <main class="about-page">
-        <div class="about-top">
+        <div class="container about-top">
             <div class="about-top__container">
                 <img src="images/about-logo.png" alt="" class="about-top__logo">
                 <p class="about__text">Бренд maMiLlow's был создан семьей увлеченных бизнесменов с начальной идеей придумать здоровый и качественный продукт для своего ребенка-подростка, создать продукт-сладость, который не вызывал бы аллергической реакции на кожу и не давал скачков сахара на нежной гормональный фон тинейджера.</p>
@@ -102,6 +102,13 @@
                     рынок, а также дополнить полюбившийся
                     байерам и покупателям дизайн классической линейкой для тех, кто любит сахар в сладком.
                 </p>
+            </div>
+            <div class="swiper about-production__slider">
+                <div class="swiper-wrapper">
+                    <img src="images/about-production-image.png" alt="" class="swiper-slide about-production__slide">
+                    <img src="images/about-production-image.png" alt="" class="swiper-slide about-production__slide">
+                </div>
+                <div class="about-production__pagination"></div>
             </div>
         </section>
         <section class="container about-recipe" id="recipe" aria-labelledby="#recipe-heading">
