--- a/about-us.html
+++ b/about-us.html
@@ -53,10 +53,10 @@
             <div class="swiper about-top__slider">
                 <div class="swiper-wrapper about-top__wrapper">
                     <div class="swiper-slide about-top__slide">
-                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-img">
                     </div>
                     <div class="swiper-slide about-top__slide">
-                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-image">
+                        <img src="images/about-top-slide.png" alt="" class="about-top__slide-img">
                     </div>
                 </div>
             </div>
