--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </div>
             <div class="swiper home-news__slider">
                 <div class="swiper-wrapper">
-                    <img src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
-                    <img src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
+                    <img srcset="images/home-news-img-mobile.png 480w" src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
+                    <img srcset="images/home-news-img-mobile.png 480w" src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
                 </div>
             </div>
             <div class="home-news__pagination"></div>
@@ -72,7 +72,8 @@
                 </div>
             </div>
             <div class="home-assortment__container">
-                <p class="home-page__text home-assortment__text">
+                <h2 class="home-page__subtitle home-assortment__title">О товаре</h2>
+                <p class="home-page__main-text home-assortment__text">
                     Ассортимент продукции бренда maMILlow’s включает как<br>
                     классические виды продукции с ванильным и фруктовым<br>
                     вкусми, так и линию без сахара, которая подойдет людям,<br>
