--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 <body>
     <header class="header">
+        <button class="header__menu-button">
+            <img src="images/menu-burger.png" alt="" class="header__menu-image">
+        </button>
         <a class="header__logo">
             <img class="header__logo-img" src="images/logo.png">
         </a>
