Правки слайдер главной

--- a/index.html
+++ b/index.html
@@ -49,20 +49,34 @@
     </header>
     <main class="home-page">
         <section class="container home-news">
-            <div class="home-news__container">
-                <h2 class="home-page__subtitle home-news__title">Новые maMILlow’s</h2>
-                <p class="home-page__main-text home-news__text">
-                    maMILlow’s бренд для взрослых, тинейджеров<br> 
-                    и детей, неважно сколько вам лет, важно что вы<br>
-                    цените качество и стиль и привыкли выбирать<br>
-                    качество и актуальность.
-                </p>
-                <a href="#feedback" class="home-news__button">Связаться</a>
-            </div>
             <div class="swiper home-news__slider">
                 <div class="swiper-wrapper">
-                    <img srcset="images/home-news-img-mobile.png 480w" src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
-                    <img srcset="images/home-news-img-mobile.png 480w" src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
+                    <div class="swiper-slide home-news__slide">
+                        <div class="home-news__container">
+                            <h2 class="home-page__subtitle home-news__title">Новые maMILlow’s</h2>
+                            <p class="home-page__main-text home-news__text">
+                                maMILlow’s бренд для взрослых, тинейджеров<br> 
+                                и детей, неважно сколько вам лет, важно что вы<br>
+                                цените качество и стиль и привыкли выбирать<br>
+                                качество и актуальность.
+                            </p>
+                            <a href="#feedback" class="home-news__button">Связаться</a>
+                        </div>
+                        <img srcset="images/home-news-img-mobile.png 480w" src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
+                    </div>
+                    <div class="swiper-slide home-news__slide">
+                        <div class="home-news__container">
+                            <h2 class="home-page__subtitle home-news__title">Новые maMILlow’s</h2>
+                            <p class="home-page__main-text home-news__text">
+                                maMILlow’s бренд для взрослых, тинейджеров<br> 
+                                и детей, неважно сколько вам лет, важно что вы<br>
+                                цените качество и стиль и привыкли выбирать<br>
+                                качество и актуальность.
+                            </p>
+                            <a href="#feedback" class="home-news__button">Связаться</a>
+                        </div>
+                        <img srcset="images/home-news-img-mobile.png 480w" src="images/home-news-img.png" alt="" class="swiper-slide home-news__img">
+                    </div>
                 </div>
             </div>
             <div class="home-news__pagination"></div>
@@ -75,7 +89,7 @@
                 </div>
             </div>
             <div class="home-assortment__container">
-                <h2 class="home-page__subtitle home-assortment__title">О товаре</h2>
+                <h2 class="home-page__subtitle home-assortment__title">О продукции</h2>
                 <p class="home-page__main-text home-assortment__text">
                     Ассортимент продукции бренда maMILlow’s включает как<br>
                     классические виды продукции с ванильным и фруктовым<br>
